--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <section>
         <div>
             <label for="txtn">Número:</label>
-            <input type="number" name="numero" id="txtn">
+            <input type="number" name="num" id="txtn" >
             <input type="button" value="Gerar Tabuada" onclick="tabuada()">
         </div>
         <div>
-            <select name="Tabuada" id="seltab"></select>
+            <select name="Tabuada" id="seltab" size="10"></select>
         </div>
     </section>
     <footer>
